--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.2",
-    "firebase-admin": "^12.1.1"
+    "firebase-admin": "^12.1.1",
+    "openai": "^4.52.0"
   }
 }
